added question element population and ability to remove question from array once asked

--- a/style.css
+++ b/style.css
@@ -13,3 +13,12 @@ body {
 .shown {
     display: block;
 }
+
+#question-area ol li {
+    font-size: 2vw;
+    margin-left: 2%
+}
+
+#question {
+    text-align: center;
+}
